<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#CC08101F"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanner_title"
            android:textColor="@color/phoneflow_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scannerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/scanner_hint"
            android:textColor="@color/phoneflow_muted"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="@drawable/scanner_frame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#CC08101F"
        android:orientation="horizontal"
        android:padding="14dp">

        <Button
            android:id="@+id/cancelScanButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="@color/phoneflow_surface_alt"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/phoneflow_text" />

        <Button
            android:id="@+id/torchButton"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/phoneflow_primary"
            android:text="@string/torch"
            android:textAllCaps="false"
            android:textColor="@color/phoneflow_text"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
